 - ui.py: Run anonymization after checking for duplicates, to prevent host or
   user names which look like hex numbers to corrupt the stack trace.
   (LP: #953104)
 - apport-gtk: Require an application to both have TERM and SHELL in its
   environment to consider it a command line application that was started by
   the user. (LP: #962130)

Improvements:
 - hookutils.py, attach_alsa(): Add the full "pacmd list" output instead of
   just sinks and sources. Thanks David Henningsson.
 - apport-gtk, apport-kde: Show the ExecutablePath while we're collecting data
   for the crash report. Thanks Evan Dandrea. (LP: #938707).

1.94.1 (2012-03-07)
-------------------
Bug fixes:
 - test_ui_kde.py: Re-enable inadvertently disabled "bug report for uninstalled
   package" test.
 - ui.py, collect_info(): Do not assume that reports have a "ProblemType"
   field. This is not the case when updating a bug. (LP: #947519)
 - apport-cli: Consistently handle unicode vs. byte arrays. (LP: #946207)
 - report.py, anonymize(): Fix crash when the hostname or user name contain
   non-ASCII characters. (LP: #945230)
 - packaging-apt-dpkg.py: Fix UnicodeDecodeError on unexpected md5sum output.
   (LP: #921037)
 - apport-gtk: Fix handling of non-ASCII strings in message dialogs.
   (LP: #865394)

1.94 (2012-03-02)
-----------------
Bug fixes:
 - apport: Set the group of written reports to "whoopsie" if that group exists.
 - Fix tests to run properly against the system-installed modules and binaries.
 - test/run: Run under LC_MESSAGES=C to avoid test failures due to translated
   strings.
 - general-hooks/generic.py: Also attach xsession-errors for programs that link
   to libgtk-3.
 - launchpad.py: Properly handle "Expired" status, to avoid marking new bugs as
   duplicates of expired ones. (LP: #941854)
 - apport: Fix crash if the "whoopsie" group does not exist. (LP: #942326)
 - report.py, crash_signature(): Do not put "<module>" frames into Python crash